--- a/cssproducto.css
+++ b/cssproducto.css
@@ -101,7 +101,7 @@ background: linear-gradient(to right, #F1FDFF 0%, #41EFFF 100%);
 }
 /*el producto xd*/
 .producto{
-  background-image: url(img/fondo6.png);
+  background-image: url(fondo6.png);
   background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -143,33 +143,6 @@ background: linear-gradient(to right, #F1FDFF 0%, #41EFFF 100%);
     justify-content: center;
 
 }
-/*graficos we esos que muestran datos*/
-.grafico{
-    min-height: 30rem;
-    background-repeat: no-repeat;
-    background-size: cover;
-    grid-column: 1 / 3;
-}
-.grafico--uno{
-    grid-row: 2 / 3;
-    background-image: url(../img/grafico1.jpg);
-}
-
-@media (min-width:768px){
-    .grafico--dos{
-        grid-row: 5 / 6;
-        background-image: url(../img/grafico2.jpg);
-        grid-column: 2 / 4;
-    }
-}
- .grafico--dos{
-    grid-row: 7 / 8;
-    background-image: url(../img/grafico2.jpg);
- }
- .grafico--dos{
-    grid-row: 5 / 6;
-    background-image: url(../img/grafico2.jpg);
- }
 
  /*pagina producto*/
  .formulario{
@@ -276,7 +249,7 @@ background: linear-gradient(to right, #F1FDFF 0%, #41EFFF 100%);
     flex-wrap: wrap;
     width:50px;
     height:40px;
-    background-image: url(img/icono2.png);
+    background-image: url(icono2.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -317,7 +290,7 @@ background: linear-gradient(to right, #F1FDFF 0%, #41EFFF 100%);
     left: 0;
     width: 100%;
     height: 100px;
-    background: url("img/olas.png");
+    background: url("olas.png");
     background-size: 1000px 100px;
   }
   
