--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ button:hover{
     left: 0;
     width: 100%;
     height: 100px;
-    background: url("img/olas.png");
+    background: url("olas.png");
     background-size: 1000px 100px;
   }
   
