--- a/cssproducto.css
+++ b/cssproducto.css
@@ -101,7 +101,7 @@ background: linear-gradient(to right, #F1FDFF 0%, #41EFFF 100%);
 }
 /*el producto xd*/
 .producto{
-  background-image: url(img/fondo6.png);
+  background-image: url(fondo6.png);
   background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -276,7 +276,7 @@ background: linear-gradient(to right, #F1FDFF 0%, #41EFFF 100%);
     flex-wrap: wrap;
     width:50px;
     height:40px;
-    background-image: url(img/icono2.png);
+    background-image: url(icono2.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -317,7 +317,7 @@ background: linear-gradient(to right, #F1FDFF 0%, #41EFFF 100%);
     left: 0;
     width: 100%;
     height: 100px;
-    background: url("img/olas.png");
+    background: url("olas.png");
     background-size: 1000px 100px;
   }
   
